--- a/index.html
+++ b/index.html
@@ -1,59 +1,88 @@
+
 <!DOCTYPE html>
-<html lang="ca" class="html">
-
+<html lang="ca">
 <head>
-    <title>La Cuina del Barbut - Cuina o Barbàrie. Cuina catalana i casolana, amb molt de xup xup i de tradició als
-        fogons. Descobreix les nostres vídeo receptes en un minut.</title>
-    <link rel="stylesheet" href="style.css">
-    <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="La Cuina del Barbut" content="A la Cuina del Barbut trobaràs una cuina catalana i casolana, amb molt de xup xup i de tradició als
-        fogons. Descobreix les nostres vídeo receptes en un minut.">
-    <meta name="description"
-        content="Descobreix les nostres receptes catalanes i casolanes a La Cuina del Barbut. 
-        Vídeos d'un minut per a cada plat, plens de tradició i sabor. Segueix-nos per a més delícies culinàries">
-    <meta name="robots" content="index,follow">
-    <!-- Si el tràfic és http, el redirigeix a la mateixa ruta pero https (redireccio) 
-    <script>
-        if (location.protocol !== 'https:') {
-            location.replace(`https:${location.href.substring(location.protocol.length)}`); 
-        }
-    </script> -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>ClàssiK - Cultura irreverent</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-    <header>
-        <h1 style="position: absolute; left: -9999px; top: -9999px;">La Cuina del Barbut - Cuina o Barbàrie. Cuina catalana i casolana, amb molt de xup xup i de tradició als
-            fogons. Descobreix les nostres vídeo receptes en un minut.</h1>
-        <div class="header_div">
-            <nav class="header_nav">
-                <h2 class="responsive"><a href="receptes.html">Receptes</a></h2>
-                <h2 class="responsive"><a href="quisom.html">Qui som</a></h2>
-                <h2 class="responsive"><a href="projectes.html">Projectes</a></h2>
-                <h2 class="responsive"><a href="botiga.html">Botiga</a></h2>
-            </nav>
-        </div>
-    </header>
+  <!-- Hero Section -->
+  <section class="hero">
+    <div>
+      <h1>ClàssiK - Cultura irreverent</h1>
+      <p>Arrels catalanes, actitud global.</p>
+      <button class="cta">Descobreix més</button>
+    </div>
+  </section>
 
-    <main class="responsive">
-        <div class="main_img">
-            <img src="images/logo_blanc.png" alt="Logo png en color blanc de la cuina del barbut" />
-        </div>
-    </main>
+  <!-- Qui som -->
+  <section class="qui-som">
+    <h2>Irreverents per definició</h2>
+    <p>A ClàssiK reinterpretem la cultura amb una mirada atrevida i única.</p>
+  </section>
 
-    <footer>
-        <div class="responsive footer_logos">
-            <a href="https://www.tiktok.com/@lacuinadelbarbut?is_from_webapp=1&sender_device=pc" target="_blank"> <img
-                    class="footer_img" src="images/tiktok_blanc.png" alt="TikTok"></a>
-            <a href="https://www.instagram.com/lacuinadelbarbut?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
-                target="_blank"><img class="footer_img" src="images/instagram_blanc.png" alt="Instagram"></a>
-            <a href="mailto:contacte.lacuinadelbarbut@gmail.com">
-                <script src="https://cdn.lordicon.com/lordicon.js"></script>
-                <lord-icon src="https://cdn.lordicon.com/aycieyht.json" trigger="hover" stroke="bold"
-                    colors="primary:#ffffff" style="width:50px;height:50px">
-                </lord-icon>
-            </a>
-        </div>
-    </footer>
+  <!-- Valors -->
+  <section class="valors">
+    <div class="valor">
+      <h3>Cultura</h3>
+      <p>Arrelats al territori català i orgullosos de les nostres tradicions.</p>
+    </div>
+    <div class="valor">
+      <h3>Irreverència</h3>
+      <p>Trenquem les normes per crear productes únics i autèntics.</p>
+    </div>
+    <div class="valor">
+      <h3>Personalitat</h3>
+      <p>Dissenys que parlen per si sols amb actitud i estil.</p>
+    </div>
+  </section>
+
+  <!-- Catàleg -->
+  <section class="catalog">
+    <h2>Explora la nostra col·lecció</h2>
+    <div class="productes">
+      <div class="producte">
+        <img src="https://via.placeholder.com/300" alt="Tassa 1">
+        <h3>Tasses irreverents</h3>
+        <p>Descobreix les nostres tasses amb dissenys únics.</p>
+      </div>
+      <div class="producte">
+        <img src="https://via.placeholder.com/300" alt="Samarreta 1">
+        <h3>Samarretes amb actitud</h3>
+        <p>Per als qui volen destacar sense dir-ho.</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Testimonis -->
+  <section class="testimonis">
+    <h2>ClàssiK en acció</h2>
+    <div class="testimoni">
+      <p>"Les tasses de ClàssiK són el toc perfecte per a qualsevol matí rebel!"</p>
+      <span>- Marina, Terrassa</span>
+    </div>
+    <div class="testimoni">
+      <p>"Un disseny únic i amb molta personalitat. Això és ClàssiK."</p>
+      <span>- Marc, Berga</span>
+    </div>
+  </section>
+
+  <!-- Contacte -->
+  <section class="contacte">
+    <h2>Contacta amb nosaltres</h2>
+    <form>
+      <input type="text" name="nom" placeholder="El teu nom" required>
+      <input type="email" name="email" placeholder="El teu correu" required>
+      <textarea name="missatge" placeholder="El teu missatge" required></textarea>
+      <button type="submit" class="cta">Envia</button>
+    </form>
+  </section>
+
+  <!-- Footer -->
+  <footer>
+    &copy; 2024 ClàssiK. Tots els drets reservats.
+  </footer>
 </body>
-
 </html>
