--- a/contacte.html
+++ b/contacte.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ca">
 <head>
@@ -8,9 +7,17 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
   <!-- Header -->
-  <header>
-    <h1>ClàssiK - Contacte</h1>
+  <header class="navbar">
+    <nav>
+      <ul>
+        <li><a href="index.html">Inici</a></li>
+        <li><a href="qui_som.html">Qui som</a></li>
+        <li><a href="catalog.html">Catàleg</a></li>
+        <li><a href="contacte.html" class="active">Contacte</a></li>
+      </ul>
+    </nav>
   </header>
 
   <!-- Contacte -->
