--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ca">
 <head>
@@ -7,7 +6,18 @@
   <title>ClàssiK - Cultura irreverent</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+  <header class="navbar">
+    <nav>
+      <ul>
+        <li><a href="index.html" class="active">Inici</a></li>
+        <li><a href="qui_som.html">Qui som</a></li>
+        <li><a href="catalog.html">Catàleg</a></li>
+        <li><a href="contacte.html">Contacte</a></li>
+      </ul>
+    </nav>
+  </header>
   <!-- Hero Section -->
   <section class="hero">
     <div>
