--- a/qui_som.html
+++ b/qui_som.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ca">
 <head>
@@ -7,10 +6,18 @@
   <title>ClàssiK - Qui som</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
   <!-- Header -->
-  <header>
-    <h1>ClàssiK - Cultura irreverent</h1>
+  <header class="navbar">
+    <nav>
+      <ul>
+        <li><a href="index.html">Inici</a></li>
+        <li><a href="qui_som.html" class="active">Qui som</a></li>
+        <li><a href="catalog.html">Catàleg</a></li>
+        <li><a href="contacte.html">Contacte</a></li>
+      </ul>
+    </nav>
   </header>
 
   <!-- Qui som -->
