--- a/contacte.html
+++ b/contacte.html
@@ -5,13 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ClàssiK - Contacte</title>
   <link rel="stylesheet" href="style.css">
-  <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
   <script>
-    (function () {
-      // Inicialitza EmailJS amb la Public Key
-      emailjs.init("IKMe_2uHBc0gk0IjO");
-    })();
-
+    // Inicialitza EmailJS amb la Public Key
+    emailjs.init("IKMe_2uHBc0gk0IjO"); // Substitueix per la teva Public Key
+  </script>
+  <script>
     function sendEmail(event) {
       event.preventDefault();
 
