--- a/contacte.html
+++ b/contacte.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>ClàssiK - Contacte</title>
   <link rel="stylesheet" href="style.css">
   <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
   <script>
@@ -54,7 +55,6 @@
 <body>
   <!-- Header -->
   <header class="navbar">
-    <h1>ClàssiK - Cultura irreverent</h1>
     <nav>
       <ul>
         <li><a href="index.html">Inici</a></li>
