--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="ca">
 <head>
@@ -5,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ClàssiK - Cultura irreverent</title>
   <link rel="stylesheet" href="style.css">
+  <script src="carret.js" defer></script>
 </head>
 
 <body>
@@ -18,6 +20,7 @@
       </ul>
     </nav>
   </header>
+
   <!-- Hero Section -->
   <section class="hero">
     <div>
@@ -49,50 +52,23 @@
     </div>
   </section>
 
-  <!-- Catàleg -->
-  <section class="catalog">
-    <h2>Explora la nostra col·lecció</h2>
-    <div class="productes">
-      <div class="producte">
-        <img src="https://via.placeholder.com/300" alt="Tassa 1">
-        <h3>Tasses irreverents</h3>
-        <p>Descobreix les nostres tasses amb dissenys únics.</p>
-      </div>
-      <div class="producte">
-        <img src="https://via.placeholder.com/300" alt="Samarreta 1">
-        <h3>Samarretes amb actitud</h3>
-        <p>Per als qui volen destacar sense dir-ho.</p>
-      </div>
-    </div>
-  </section>
-
-  <!-- Testimonis -->
+  <!-- Testimonis rotatius -->
   <section class="testimonis">
-    <h2>ClàssiK en acció</h2>
-    <div class="testimoni">
+    <h2>Què diuen els nostres clients?</h2>
+    <div class="testimoni" id="testimonis-container">
       <p>"Les tasses de ClàssiK són el toc perfecte per a qualsevol matí rebel!"</p>
       <span>- Marina, Terrassa</span>
     </div>
-    <div class="testimoni">
-      <p>"Un disseny únic i amb molta personalitat. Això és ClàssiK."</p>
-      <span>- Marc, Berga</span>
-    </div>
-  </section>
-
-  <!-- Contacte -->
-  <section class="contacte">
-    <h2>Contacta amb nosaltres</h2>
-    <form>
-      <input type="text" name="nom" placeholder="El teu nom" required>
-      <input type="email" name="email" placeholder="El teu correu" required>
-      <textarea name="missatge" placeholder="El teu missatge" required></textarea>
-      <button type="submit" class="cta">Envia</button>
-    </form>
   </section>
 
   <!-- Footer -->
   <footer>
-    &copy; 2024 ClàssiK. Tots els drets reservats.
+    <p>&copy; 2024 ClàssiK. Tots els drets reservats.</p>
+    <div class="social-icons">
+      <a href="#"><img src="icon-facebook.png" alt="Facebook"></a>
+      <a href="#"><img src="icon-twitter.png" alt="Twitter"></a>
+      <a href="#"><img src="icon-instagram.png" alt="Instagram"></a>
+    </div>
   </footer>
 </body>
 </html>
