--- a/index.html
+++ b/index.html
@@ -65,9 +65,7 @@
   <footer>
     <p>&copy; 2024 ClàssiK. Tots els drets reservats.</p>
     <div class="social-icons">
-      <a href="#"><img src="icon-facebook.png" alt="Facebook"></a>
-      <a href="#"><img src="icon-twitter.png" alt="Twitter"></a>
-      <a href="#"><img src="icon-instagram.png" alt="Instagram"></a>
+      <a href="https://www.instagram.com/classik.cat/?hl=es" target="_blank"><img src="images/instagram_white.png" alt="Instagram"></a>
     </div>
   </footer>
 </body>
