Ajustar catalog.php

--- a/contacte.html
+++ b/contacte.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html lang="ca">
 <head>
@@ -59,7 +61,7 @@
       <ul>
         <li><a href="index.html">Inici</a></li>
         <li><a href="qui_som.html">Qui som</a></li>
-        <li><a href="catalog.html">Catàleg</a></li>
+        <li><a href="catalog.php">Catàleg</a></li>
         <li><a href="contacte.html" class="active">Contacte</a></li>
       </ul>
     </nav>
