--- a/OLD_catalog.html
+++ b/OLD_catalog.html
@@ -16,7 +16,7 @@
       <ul>
         <li><a href="index.html">Inici</a></li>
         <li><a href="qui_som.html">Qui som</a></li>
-        <li><a href="catalog.html" class="active">Catàleg</a></li>
+        <li><a href="catalog.php" class="active">Catàleg</a></li>
         <li><a href="contacte.html">Contacte</a></li>
       </ul>
     </nav>
