--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <ul>
         <li><a href="index.html" class="active">Inici</a></li>
         <li><a href="qui_som.html">Qui som</a></li>
-        <li><a href="catalog.html">Catàleg</a></li>
+        <li><a href="catalog.php">Catàleg</a></li>
         <li><a href="contacte.html">Contacte</a></li>
       </ul>
     </nav>
