--- a/qui_som.html
+++ b/qui_som.html
@@ -14,7 +14,7 @@
       <ul>
         <li><a href="index.html">Inici</a></li>
         <li><a href="qui_som.html" class="active">Qui som</a></li>
-        <li><a href="catalog.html">Catàleg</a></li>
+        <li><a href="catalog.php">Catàleg</a></li>
         <li><a href="contacte.html">Contacte</a></li>
       </ul>
     </nav>
