Add formulari registre

--- a/contacte.html
+++ b/contacte.html
@@ -87,6 +87,7 @@
         <li><a href="qui_som.html">Qui som</a></li>
         <li><a href="catalog.php">Catàleg</a></li>
         <li><a href="contacte.html" class="active">Contacte</a></li>
+        <li><a href="registre.html">Registra't</a></li>
       </ul>
     </nav>
   </header>
