--- a/qui_som.html
+++ b/qui_som.html
@@ -16,6 +16,7 @@
         <li><a href="qui_som.html" class="active">Qui som</a></li>
         <li><a href="catalog.php">Catàleg</a></li>
         <li><a href="contacte.html">Contacte</a></li>
+        <li><a href="registre.html">Registra't</a></li>
       </ul>
     </nav>
   </header>
