--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <li><a href="qui_som.html">Qui som</a></li>
         <li><a href="catalog.php">Catàleg</a></li>
         <li><a href="contacte.html">Contacte</a></li>
+        <li><a href="registre.html">Registra't</a></li>
       </ul>
     </nav>
   </header>
